--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 		"deploy": "wrangler deploy --minify",
 		"db-delete": "wrangler d1 execute message418_db --local --command \"delete from User\"",
 		"db-select": "wrangler d1 execute message418_db --local --command \"select * from User\"",
-		"format": "biome check --write src"
+		"format": "biome check --write src",
+		"tsc": "tsc"
 	},
 	"dependencies": {
 		"@prisma/adapter-d1": "^5.21.1",
